# final_project

./: CMakeLists.txt  README.md  a.out  b.out  fem2d_cu.cu  fem2d_heat_rectangle.cpp  fem2d_heat_rectangle.sh  fem2d_mpi.cpp  fem2d_openmp.cpp  fem2d_openmp.sh  heat.ppt  show_result.m  test_op.cpp  test_serial.cpp
